# breakpad

./: .gitignore  Breakpad.MTarget  CMakeLists.txt  External.MRepo  Makefile.am  Makefile.in  README.md  configure
.github/workflows/: bcny-tools.yml
src/: Config.h
src/client/: CMakeLists.txt
src/client/ios/: Breakpad.mm
src/client/linux/dump_writer_common/: thread_info.cc  ucontext_reader.cc
src/client/linux/handler/: exception_handler.cc  exception_handler_unittest.cc  minidump_descriptor.cc
src/client/linux/microdump_writer/: microdump_writer.cc  microdump_writer_unittest.cc
src/client/linux/minidump_writer/: linux_dumper.h  linux_dumper_unittest_helper.cc  linux_ptrace_dumper.cc  linux_ptrace_dumper_unittest.cc  minidump_writer.cc  minidump_writer_unittest.cc
src/client/mac/Breakpad.xcodeproj/: project.pbxproj
src/client/mac/Framework/: Breakpad.h  Breakpad.mm
src/client/mac/handler/: dynamic_images.cc  exception_handler.cc  exception_handler.h  minidump_generator.h
src/client/mac/testapp/: Controller.m
src/client/windows/unittests/: crash_generation_server_test.cc  exception_handler_death_test.cc  exception_handler_test.cc
src/common/: dump_options.h  dwarf_cfi_to_module.cc  dwarf_cfi_to_module.h  dwarf_cfi_to_module_unittest.cc  dwarf_cu_to_module.cc  dwarf_cu_to_module_unittest.cc  dwarf_line_to_module.cc  language.cc  md5.cc  memory_allocator_unittest.cc  module.cc  module.h  path_helper.cc  stabs_reader.cc  stabs_reader.h  stabs_reader_unittest.cc  stabs_to_module.cc  string_conversion.cc
src/common/dwarf/: bytereader.cc  dwarf2diehandler.cc  dwarf2reader.cc  elf_reader.cc
src/common/linux/: dump_symbols.cc  elf_gnu_compat.h  elf_symbols_to_module.cc  elfutils.h  google_crashdump_uploader.cc  memory_mapped_file.cc  memory_mapped_file_unittest.cc  safe_readlink.cc
src/common/mac/: Breakpad.xcconfig  arch_utilities.cc  dump_syms.cc  file_id.cc  http_upload.cc  macho_id.cc  macho_reader.cc  macho_reader_unittest.cc  macho_utilities.cc  macho_walker.cc
src/common/pecoff/: dump_symbols-inl.h  dump_symbols.cc  dump_symbols.h  pecoff.h  pecoff_file_id.cc  pecoff_file_id.h  pecoffutils.cc  pecoffutils.h
src/common/windows/: dia_util.cc  dia_util.h  omap.cc  pdb_source_line_writer.cc  pdb_source_line_writer.h
src/google_breakpad/common/: minidump_format.h
src/google_breakpad/processor/: microdump.h  stack_frame_cpu.h
src/include/: elf.h  link.h
src/processor/: cfi_frame_info_unittest.cc  dump_context.cc  microdump.cc  minidump.cc  minidump_processor.cc  minidump_processor_unittest.cc  simple_symbol_supplier.cc  stackwalk_common.cc  stackwalker.cc  stackwalker_address_list_unittest.cc  stackwalker_amd64_unittest.cc  stackwalker_arm64_unittest.cc  stackwalker_arm_unittest.cc  stackwalker_loong64_unittest.cc  stackwalker_mips64_unittest.cc  stackwalker_mips_unittest.cc  stackwalker_riscv64_unittest.cc  stackwalker_riscv_unittest.cc  stackwalker_x86_unittest.cc  synth_minidump.h  synth_minidump_unittest.cc
src/tools/: CMakeLists.txt
src/tools/linux/dump_syms/: dump_syms.cc
src/tools/linux/md2core/: minidump-2-core.cc
src/tools/mac/dump_syms/: dump_syms_tool.cc
src/tools/mac/dump_syms/dump_syms.xcodeproj/xcshareddata/xcschemes/: dump_syms.xcscheme
src/tools/windows/converter/: ms_symbol_server_converter.cc
src/tools/windows/dump_syms/: dump_syms.cc
src/tools/windows/symupload/: symupload.cc
